fixed header height on small devices

--- a/src/css/components/header.scss
+++ b/src/css/components/header.scss
@@ -6,6 +6,9 @@ header{
   align-items: center;
   background: #607D8B;
   @include toolbar-shadow;
+  @media (max-width: 540px) {
+    height: 75px;
+  }
   h2{
     font-family: 'Dancing Script', cursive;
     color: #fff;
